--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,19 @@
       <title>Home</title>
       <link rel="stylesheet" href="css/style.css">
       <!-- import JS file -->
-      <script src="js/script.js"></script>
+      <script src="js/index.js"></script>
   </head>
 
   <body>
     <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1>Home</h1>
-          <p>This is the home page.</p>
-        </div>
+      <h1 class="title">SMART Notes</h1>
+      <div class="form-container">
         <form id="upload-form" class="upload-form">
           <input type="file" name="file" />
           <button type="submit">Upload</button>
         </form>
       </div>
-      <div id="file-container">
+      <div id="files-container">
       </div>
     </div>
   </body>
